[package]
name = "realtime-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.26"
futures-util = "0.3.26"
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = "0.13.3"
stderrlog = "0.6.0"
structopt = "0.3.26"
tokio = { version = "1.25.0", features = ["full"]}
warp = "0.3.3"
#tokio = { version = "1", features = ["full"] }
#warp = "0.3.7"
#serde = {version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#futures = "0"
#futures-util = { version = "0.3", default-features = false, features = ["sink"] }
#uuid = { version = "0.4", features = ["serde", "v4"] }

[profile.release]
overflow-checks = true